--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,8 +8,18 @@ body {
   font-family: $heading-font;
   line-height: 1.5;
   display: block;
+  h1 {
+    font-weight: 500;
+    line-height: 1.2;
+  }
 }
 
+.wrapper {
+  max-width: 1300px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -26,7 +36,7 @@ body {
   li {
     display: inline;
     align-self: center;
-    padding-left: 5px;
+    padding-left: 11px;
     font-size: 20px;
     font-family: $li-heading-font;
     color: rgba(197, 31, 31, 0.123);
@@ -66,15 +76,61 @@ a:visited {
 
 .slang {
   display: flex;
+  margin-bottom: 50px;
+  max-width: 640px;
   #{&}-content {
-    font-size: 15px;
+    font-size: 25px;
+
+    h1 {
+      font-weight: 500;
+      line-height: 1.2;
+      margin-bottom: 5px;
+    }
+    p {
+      font-size: 18px;
+      color: $text-color;
+    }
   }
 }
 
-.wrapper {
-  max-width: 1100px;
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+.companies-logo {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 90px;
 }
+
+.images-section {
+  display: flex;
+  justify-content: space-between;
+
+  #{&}_1 {
+    max-width: 520px;
+    h1 {
+      margin: 35px 0 25px;
+    }
+
+    p {
+      font-weight: 300px;
+      font-size: 25px;
+      color: $text-color;
+      line-height: 2rem;
+    }
+  }
+
+  #{&}_2 {
+    max-width: 520px;
+
+    h1 {
+      margin: 35px 0 25px;
+    }
+
+    p {
+      font-weight: 300px;
+      font-size: 25px;
+      color: $text-color;
+      line-height: 2rem;
+    }
+  }
+}
+
+
