--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,3 +13,19 @@ $paragraph-color: #333;
   color: $text-color;
   line-height: 2rem;
 }
+
+@mixin getInTouch {
+  background: linear-gradient(to bottom, #fbe850 5%, #fbe850 100%);
+  background-color: #fbe850;
+  display: inline-block;
+  cursor: pointer;
+  color: black;
+  font-size: 20px;
+  padding: 8px 16px;
+  text-decoration: none;
+
+  &:hover {
+    color: white;
+    background: linear-gradient(to bottom, #fbe75085 5%, #fbe75098 100%);
+  }
+}
