--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@ body {
 
 .wrapper {
   max-width: 1300px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -49,19 +50,7 @@ body {
   }
 
   #{&}-button {
-    background: linear-gradient(to bottom, #fbe850 5%, #fbe850 100%);
-    background-color: #fbe850;
-    display: inline-block;
-    cursor: pointer;
-    color: black;
-    font-size: 20px;
-    padding: 8px 16px;
-    text-decoration: none;
-
-    &:hover {
-      color: white;
-      background: linear-gradient(to bottom, #fbe75085 5%, #fbe75098 100%);
-    }
+    @include getInTouch;
   }
 }
 
@@ -134,6 +123,12 @@ a:visited {
   }
 }
 
+.banner {
+  background-color: #2e3038;
+  padding: 48px 0;
+  margin-bottom: 35px;
+}
+
 .bgc-section {
   display: flex;
   justify-content: space-between;
@@ -151,4 +146,47 @@ a:visited {
       margin-bottom: 15px;
     }
   }
+}
+
+.bgc-section_2 {
+  @extend .bgc-section_1;
+}
+
+.footer-interest {
+  max-width: 500px;
+
+  h1 {
+    margin: 15px 0;
+  }
+
+  p {
+    margin: 15px 0;
+    @include paragraph;
+  }
+  a {
+    @include getInTouch;
+    padding: 19px 17px;
+    margin-bottom: 48px;
+  }
+}
+
+
+.banner_2 {
+    @extend .banner;
+    margin-bottom: 0;
+    padding: 30px 0;
+}
+
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+
+    h1 {
+        font-size: 25px;
+    }
+
+    img {
+        padding-left: 10px;
+    }
 }
